tests/invalid/coerce_clobbered.err_exp
coerce_clobbered.m:021: In clause for `bad(in(clobbered), out)':
coerce_clobbered.m:021:   in coerce expression:
coerce_clobbered.m:021:   mode error: the argument term has instantiatedness
coerce_clobbered.m:021:   `clobbered', but it must have a ground inst.
